# cg

./: CMakeLists.txt  README.md
.cache/clangd/index/: config.cpp.C75012EC6B0B6002.idx  config.h.0322FE9B1359AEAD.idx  config.h.205221BC2A29251C.idx  glad.c.428B97A37676624B.idx  glad.c.B812BC15B221C048.idx  glad.c.C47ECB4BAFF9357E.idx  glad.h.B0CD9211CA6F3987.idx  glad.h.C14A7BBC54D250EF.idx  glad.h.EFE8CEB9229D231E.idx  glad.h.F48639E790A9E22A.idx  glfw3.h.2F64C7BE585BBE2A.idx  glfw3.h.50DAC6AA9E626BB1.idx  khrplatform.h.058954D38EC1BBD0.idx  khrplatform.h.77B2BE3E9604DB15.idx  khrplatform.h.7D1EFB72DCB955BB.idx  khrplatform.h.D646BBB855CD9EA3.idx  linear_algs.cpp.A081F1A9E8FA1E0F.idx  linear_algs.h.DF6D36590EC4F7DB.idx  main.cpp.68B8178988EA5C7C.idx  main.cpp.FE6EFFE9D464B2DD.idx  material.cpp.B5A09A7BA3BD7385.idx  material.h.FDCA0F5039FC7222.idx  stb_image.h.CA6F39892BDF9246.idx  triangle_mesh.cpp.23E3B74AC85946E2.idx  triangle_mesh.h.DE6DC58C8CE3DCDE.idx
src/: config.h  glad.c  linear_algs.cpp  linear_algs.h  main.cpp  material.cpp  material.h  triangle_mesh.cpp  triangle_mesh.h
src/shaders/: fragment.txt  vertex.txt
